--- a/index.html
+++ b/index.html
@@ -242,16 +242,21 @@
           <p></p>
           <div class="row">
             <div class="col-xs-12 col-sm-6">
-              <p>For this project we were tasked to create a prototype of a hydraulic farm. The idea was to "sell" our product. We had to engineer the entire thing. The only peice that was lacking was the raspberry-controlled supply of nutrients into the plants. We simply didn't have the resources and tools available. </p>
-              <p>We ended up winning this competition. We managed to prototype a working hydraulic farm that is also a table. I was proud of this project. I led most of the design choices of our project and made it stand out compared to the others.</p>
+              <p>For this project we were tasked to create a prototype of a hydraulic farm. The idea was to "sell" our
+                product. We had to engineer the entire thing. The only piece that was lacking was the
+                raspberryPi-controlled supply of nutrients into the plants. We simply didn't have the resources and tools
+                available. </p>
+              <p>We ended up winning this competition. We managed to prototype a working hydraulic farm that is also a
+                table. I was proud of this project. I led most of the design choices of our project and made it stand
+                out compared to the others.</p>
             </div>
             <div class="col-xs-12 col-sm-6" id="iDesigns_group">
               <img src="media/iDesigns_group.jpg" class="img-responsive center-block" alt="Responsive image">
             </div>
-              <div class="col-xs-12" id=iDesigns_project>
-                <img src="media/iDesigns_project.jpg" class="img-responsive center-block" alt="Responsive image">
-              </div>
-      
+            <div class="col-xs-12" id=iDesigns_project>
+              <img src="media/iDesigns_project.jpg" class="img-responsive center-block" alt="Responsive image">
+            </div>
+
           </div>
         </details>
       </div>
@@ -260,16 +265,20 @@
           <summary>Keypad/Motion Sensored Security System(s)</summary>
           <div class="seperator"></div>
           <p></p>
-          <p class="textwall">I won't get too specific about these projects, they have accompanying documentation for each. </p>
-          <p class="textwall">Essentially these projects were developed on the NUCLEO, with minor components/devices to provide functionality</p>
+          <p class="textwall">I won't get too specific about these projects, they have accompanying documentation for
+            each. </p>
+          <p class="textwall">Essentially these projects were developed on the NUCLEO, with minor components/devices to
+            provide functionality</p>
           <h4>Keypad Project</h4>
-          <p class="textwall">Used a keypad to create a basic password based system, that would display the status of the system either being locked or unlocked. Also gave a password reset as well.</p>
-          <a href="pdf/CSE321_Project2_Documentation.pdf" class="links">Documentation</a><br/>
+          <p class="textwall">Used a keypad to create a basic password based system, that would display the status of
+            the system either being locked or unlocked. Also gave a password reset functionality as well.</p>
+          <a href="pdf/CSE321_Project2_Documentation.pdf" class="links">Documentation</a><br />
           <a href="https://github.com/CSE321-Fall2020/project2-Kielbasa21" class="links">Github Repository</a>
 
           <h4>MotionSensored Project</h4>
-          <p class="textwall">Used a ultra sonic sensor to detect movement. It will play a sound when it's locked and movement is detected but nothing when it is unlocked.</p>
-          <a href="pdf/CSE 321 Project 3 Documentation.pdf" class="links">Documentation</a><br/>
+          <p class="textwall">Used a ultra sonic sensor to detect movement. It will play a sound when it's locked and
+            movement is detected but nothing when it is unlocked.</p>
+          <a href="pdf/CSE 321 Project 3 Documentation.pdf" class="links">Documentation</a><br />
           <a href="https://github.com/CSE321-Fall2020/project-3-pskasza" class="links">Github Repository</a>
         </details>
       </div>
@@ -278,9 +287,13 @@
           <summary>Codeville</summary>
           <p class></p>
           <p class="textwall">This project was by far my most favorite and accomplished.</p>
-          <p class="textwall">I have never coded front-end nor backend before so going into this project was very hard. I decided to focus more on backend, its what I preferred and most of my group wanted to do backend. My contributions can be tracked in the github repo below.</p>
-          <p class="textwall"> I have included the youtube video we needed to create as a group to "sell" our website. It was first a presentation then a showcase of our features, so please bear that in mind. The website features start around the 2 minute mark, under Manav.</p>
-          <a href="https://github.com/UB-CSE/course-project-codeville" class="links">Github Repository</a><br/>
+          <p class="textwall">I have never coded front-end nor backend before so going into this project was very hard.
+            I decided to focus more on backend, its what I preferred and most of my group wanted to do front-end. My
+            contributions can be tracked in the github repo below.</p>
+          <p class="textwall"> I have included the youtube video we needed to create as a group to "sell" our website.
+            It was first a presentation then a showcase of our features, so please bear that in mind. The website
+            features start around the 2 minute mark, under Manav.</p>
+          <a href="https://github.com/UB-CSE/course-project-codeville" class="links">Github Repository</a><br />
           <a href="https://www.youtube.com/watch?v=D7CobPZzUy8&feature=youtu.be" class="links">Youtube Link</a>
         </details>
       </div>
