Updated information, Fall 2021

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="col-xs-12 linegutter" id="aboutmeDiv">
         <h3 class="centerText yellowText">Computer Science Major</h3>
         <h3 class="centerText yellowText">University at Buffalo, Class of 2022</h3>
-        <p class="centerText yellowText"><b>Term GPA: 3.72</b></p>
+        <p class="centerText yellowText"><b>Term GPA: 3.5</b></p>
         <p class="centerText yellowText"><em><b>Deans List:</b> Fall, 2020</em></p>
         <p class="centerText yellowText">Determined, hard-working individual yearning to learn more and apply skills to
           the real world.</p>
@@ -81,7 +81,8 @@
               <p class="text_skills">
                 Majority of my experience with these languages is this very website! I worked on a little bit of
                 front-end
-                for my <em>Codeville</em> project, but the majority of my contribution to that project was backend.
+                for my <em>Codeville</em> project, but the majority of my contribution to that project was backend.<br>
+                I also had a ton of exposure to these languages, and overall structure of sites, during my internship at Fidelity Investments doing website parsing.
               </p>
             </details>
           </div>
@@ -102,14 +103,15 @@
               <p class="text_skills">
                 For my social media project<em> Codeville</em>, I used PostgreSql to register users, create dynamic
                 sites,
-                add courses to a users profile and send friend requests.</p>
+                add courses to a users profile and send friend requests.
+                Also used this language during my internship at Fidelity Investments as well.</p>
             </details>
           </div>
           <div class="wrapper">
             <details>
               <summary>Javascript</summary>
               <p class="text_skills">
-                Used this skill to create dynamic sites in my social media project. Rather limited experience.
+                Used this skill to create dynamic sites in my social media project as well as tweak some front-end functionality for Fidelity Investments. Rather limited experience.
               </p>
             </details>
           </div>
@@ -129,16 +131,30 @@
               <p class="text_skills">
                 I learned the fundamentals of programming with this language. Coded a Genetic Algorithm, Breadth First
                 Search, and a very primitive MMO. Also implemented a multitude of varying data structures, ranging from
-                things like linked lists, heap structures, and AVL trees.</p>
+                things like linked lists, heap structures, and AVL trees.<br>
+
+                I also used this language extensively during my internship at Fidelity Investments,
+                utilizing selenium to test and fix website parsers.
+              </p>
             </details>
           </div>
           <div class="wrapper">
             <details>
               <summary>Python</summary>
               <p class="text_skills">
-                I completed many small projects with this language early on but haven't used it much after. However,
-                from my
-                limited experience it strikes me as an easy language to understand.</p>
+                I completed many small projects with this language early on and recently coded numerous algorithms in this language for class.
+                Overall it strikes me as an easy language to understand however I don't know the more advanced quirks and techniques of the language.</p>
+            </details>
+          </div>
+          <div class="wrapper">
+            <details>
+              <summary>Assembly</summary>
+              <p class="text_skills">
+                I have worked in both MIPS assembly and ARM assembly. For MIPS I did much smaller projects focusing around
+                analyzing the performance and system of the processor.
+                However for ARM, it was a much more code-focused course. It culminated in creating the Flow Free game in ARM.
+                Overall I feel very confident in these assembly languages.
+              </p>
             </details>
           </div>
 
@@ -185,6 +201,14 @@
                 when something was detected.</p>
             </details>
           </div>
+          <div class="wrapper">
+            <details>
+              <summary>Flowfree game(ARM assembly)</summary>
+              <p class="text_skills">
+                This project was meant to replicate the mobile version of the Flow Free game in assembly. The project was fairly complex, especially for assembly. I am currently working on getting permission to show this project "publically". Feel free to contact me if you have any questions!
+                </p>
+            </details>
+          </div>
         </ul>
       </div>
     </div>
@@ -199,7 +223,7 @@
       <p class="whiteText textwall">My Computer Science career didn't go off to a great start. Similar to many of my
         peers, I struggled adjusting to college life and expectations, and lost my spot in the computer science program.
         I immediately took steps to get back on track, and by next semester, I was accepted back into the program. I
-        have maintained a GPA above a 3.0 since. During my most recent semester, while taking 19 credits, I managed to
+        have maintained a GPA above a 3.0 since. During my Fall 2020 semester, just my second semester after getting back into the program, while taking 19 credits, I managed to
         get the <em>Dean's List</em> award, with a 3.72 GPA. I’ve learned from my mistakes, and I'm determined to excel
         in everything I do.</p>
     </div>
@@ -311,7 +335,7 @@
         <h5 class="whiteText">Email: kaszapatryk@gmail.com</h5>
       </div>
       <div class="col-xs-6 col-sm-3 centerText">
-        <h4><a class="whiteText" href="www.linkedin.com/in/patryk-kasza-0a19aa19a">LinkedIn</h4>
+        <h4><a class="whiteText" href="www.linkedin.com/in/patryk-kasza-0a19aa19a">LinkedIn</a></h4>
       </div>
 
     </div>
